# hyper-surrogate

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: main.yml  on-release-main.yml
docs/: about.md  constitutive_theory.md  custom.js  examples.md  index.md  installation.md  materials.md  modules.md  theory.md  tutorial1.ipynb
docs/tutorials/: advanced_topics.md  anisotropic_materials.md  data_generation.md  export_fortran.md  getting_started.md  training_surrogates.md
examples/: README.md  analytical_umat.py  benchmark_isotropic.py  export_hybrid_umat.py  fit_treloar.py  model_discovery_cann.py  train_holzapfel_ogden.py  train_icnn_energy.py  train_neohooke_sef.py  train_neohooke_stress.py  train_polyconvex.py  two_fiber_artery.py
hyper_surrogate/: __init__.py  deformation_gradient.py  generator.py  invariants.py  kinematics.py  materials.py  symbolic.py  umat_handler.py
hyper_surrogate/benchmarking/: __init__.py  metrics.py  reporting.py
hyper_surrogate/data/: __init__.py  dataset.py  deformation.py  experimental.py  fitting.py
hyper_surrogate/export/: __init__.py  weights.py
hyper_surrogate/mechanics/: __init__.py  kinematics.py  materials.py  symbolic.py
hyper_surrogate/models/: __init__.py  base.py  cann.py  icnn.py  mlp.py  polyconvex.py
hyper_surrogate/reporting/: __init__.py  reporter.py
hyper_surrogate/scripts/: generate_deformations.py
hyper_surrogate/training/: __init__.py  losses.py  trainer.py
modules/: index.html
notebooks/: generate_deformation.ipynb
paper/: .gitignore  README.md  fe_validation.py  generate_figures.py  plot_fe_results.py  run_benchmarks.py
paper/manuscript/: abstract.tex  appendix.tex  conclusion.tex  continuum_mechanics.tex  discussion.tex  fe_validation.tex  fortran_export.tex  introduction.tex  main.tex  neural_architectures.tex  references.bib  results.tex  training.tex
scripts/: generate_deformation.ipynb  generate_deformations.py  generate_umat.py
search/: search_index.json
tests/: mock_data.py  test_benchmarking.py  test_cann.py  test_data_dataset.py  test_data_deformation.py  test_deformation_gradient.py  test_demiray.py  test_experimental.py  test_export_weights.py  test_fitting.py  test_foo.py  test_fortran_emitter.py  test_fung.py  test_generate_deformation_gradient.py  test_goh.py  test_guccione.py  test_holzapfel_ogden.py  test_hybrid_emitter.py  test_hybrid_hessian.py  test_integration.py  test_integration_e2e.py  test_kinematics.py  test_material.py  test_materials.py  test_mechanics_materials.py  test_models_icnn.py  test_models_icnn_deep.py  test_models_mlp.py  test_models_polyconvex.py  test_mooney_rivlin.py  test_multi_fiber.py  test_neohooke.py  test_ogden.py  test_random.py  test_random_deformation_gradient.py  test_reporter.py  test_symbolic_rules.py  test_training_losses.py  test_training_trainer.py  test_umat_handler.py  (+1 more)
(+8 files in other folders)
