[project]
name = "hyper-surrogate"
version = "0.3.0"
description = "Data-driven surrogates for hyperelastic constitutive models in finite element analysis"
authors = [{ name = "Joao Ferreira", email = "fj.ferreira@fe.up.pt" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = [
    "hyperelasticity",
    "constitutive-modeling",
    "surrogate-model",
    "finite-element",
    "biomechanics",
    "UMAT",
    "neural-network",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Fortran",
]
dependencies = [
    "numpy>=1.26.4",
    "sympy>=1.12",
    "matplotlib>=3.8.3",
]

[project.optional-dependencies]
ml = ["torch>=2.0"]
fitting = ["scipy>=1.12"]
bench = ["scipy>=1.12"]

[project.urls]
repository = "https://github.com/jpsferreira/hyper-surrogate"
documentation = "https://jpsferreira.github.io/hyper-surrogate/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "deptry>=0.12.0",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "types-tqdm>=4.66.0.20240106",
    "types-seaborn>=0.13.2.20240311",
    "jupyter>=1.1.1",
]
docs = [
    "mkdocs-material>=9.6.11",
    "mkdocstrings>=0.29.1",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.16.8",
    "mknotebooks>=0.8.0",
    "pymdown-extensions>=10.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["hyper_surrogate"]
disallow_untyped_defs = "True"
#disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module = [
    "hyper_surrogate.data.dataset",
    "hyper_surrogate.models.*",
    "hyper_surrogate.training.*",
]
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "-m 'not slow'"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["hyper_surrogate"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
